tests/ui/unsafe-binders/type-mismatch.stderr
warning: the feature `unsafe_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/type-mismatch.rs:1:12
   |
LL | #![feature(unsafe_binders)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #130516 <https://github.com/rust-lang/rust/issues/130516> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:5:27
   |
LL |     let x: unsafe<> i32 = 0;
   |            ------------   ^ expected `unsafe<> i32`, found integer
   |            |
   |            expected due to this
   |
   = note: expected unsafe binder `unsafe<> i32`
                       found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:7:33
   |
LL |     let x: unsafe<'a> &'a i32 = &0;
   |            ------------------   ^^ expected `unsafe<'a> &i32`, found `&{integer}`
   |            |
   |            expected due to this
   |
   = note: expected unsafe binder `unsafe<'a> &'a i32`
                  found reference `&{integer}`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
